# A2UI-1

./: .gitignore  mkdocs.yaml
.github/workflows/: python_samples_build.yml  storybook.yml
conformance-storybook/stories/: Button.stories.ts  Modal.stories.ts  MultipleChoice.stories.ts  Tabs.stories.ts
conformance-storybook/stories/helpers/: a2ui-story-wrapper.ts  version-adapter.ts
docs/: index.md
docs/concepts/: catalogs.md  client_to_server_actions.md  data-flow.md  transports.md
docs/ecosystem/: a2ui-in-the-world.md  community.md  renderers.md  where-is-it-used.md
docs/guides/: a2ui_over_mcp.md  client-setup.md  custom-components.md  design-system-integration.md  friction-log-custom-components.md  mcp-apps-in-a2ui-surface.md
docs/introduction/: agent-ui-ecosystem.md  how-to-use.md  who-is-it-for.md
docs/reference/: agents.md  renderers.md
renderers/angular/: package.json
renderers/lit/: package.json
renderers/web_core/: package-lock.json  package.json
samples/a2h-prototypes/: DESIGN.md  README.md
samples/a2h-prototypes/demo/: README.md  index.html
samples/agent/adk/collaborative_research/: DESIGN.md  __main__.py  a2ui_prompts.py  agent.py  mock_data.py  pyproject.toml  research_agents.py  tools.py
samples/agent/adk/collaborative_research/examples/: ambiguous_query.json  progressive_research.json
samples/personalized_learning/: index.html
testing/: README.md  coverage-matrix.mjs
tools/composer/: .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc
(+112 files in other folders)
